JVM:垃圾回收器的组合情况